# syllabus-to-metadata

./: .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
prompts/: citations.txt
syllabus_metadata/: __init__.py  cli.py  ingestion.py  llm.py
